--- a/app/src/main/res/layout/view_register_entity.xml
+++ b/app/src/main/res/layout/view_register_entity.xml
@@ -16,7 +16,7 @@
     <EditText
         android:id="@+id/edit_cif"
         style="@style/EditTextAuth"
-        android:hint="@string/cif"
+        android:hint="@string/nif"
         android:inputType="textCapCharacters|textNoSuggestions" />
 
 
