--- a/app/src/main/res/menu/navigation_bottom.xml
+++ b/app/src/main/res/menu/navigation_bottom.xml
@@ -14,6 +14,6 @@
     <item
         android:id="@+id/navigation_profile"
         android:icon="@mipmap/ic_novelties"
-        android:title="@string/news" />
+        android:title="@string/novelties" />
 
 </menu>
