--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,7 @@
         <item name="android:gravity">center</item>
         <item name="android:textSize">16sp</item>
         <item name="android:minWidth">200dp</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="ButtonMes.Green">
