--- a/app/src/main/res/layout/fragment_entities_list.xml
+++ b/app/src/main/res/layout/fragment_entities_list.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="net.mercadosocial.moneda.ui.entities.list.EntitiesListFragment">
 
@@ -32,10 +33,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
+        <com.malinskiy.superrecyclerview.SuperRecyclerView
             android:id="@+id/recycler_entities"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            app:layout_moreProgress="@layout/view_more_progress"
+            app:mainLayoutId="@layout/layout_recyclerview_verticalscroll"/>
 
         <View
             android:layout_width="match_parent"
