--- a/app/src/main/res/layout/row_payment.xml
+++ b/app/src/main/res/layout/row_payment.xml
@@ -38,11 +38,14 @@
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_payment_cancel"
-            style="@style/ButtonMes"
+            android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:minWidth="0dp"
-            android:background="@null"
+            android:textAllCaps="false"
+            android:paddingTop="10dp"
+            android:background="@drawable/background_pressed_common"
+            android:paddingBottom="10dp"
+            android:textSize="16sp"
             android:textColor="@color/black"
             android:text="@string/reject"/>
 
@@ -53,6 +56,7 @@
             android:layout_weight="1"
             android:minWidth="0dp"
             android:text="@string/accept"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginLeft="15dp"
+            android:layout_marginBottom="10dp"/>
     </LinearLayout>
 </LinearLayout>
