--- a/app/src/main/res/layout/fragment_intro_last_item.xml
+++ b/app/src/main/res/layout/fragment_intro_last_item.xml
@@ -13,22 +13,17 @@
         android:text="@string/start"
         android:textSize="@dimen/text_large"/>
 
+    <net.mercadosocial.moneda.views.SelectMESView
+        android:id="@+id/select_mes_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/btn_intro_enter"
         style="@style/ButtonMes"
         android:text="@string/go_to_entities_list"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="10dp"
+        android:enabled="false"/>
 
-    <TextView
-        style="@style/TextBase"
-        android:text="@string/intro_member_info"
-        android:textSize="@dimen/text_medium"
-        android:layout_marginTop="30dp"/>
 
-    <TextView
-        android:id="@+id/btn_members_info"
-        style="@style/TextBase.Purple"
-        android:text="@string/discover_how"
-        android:textSize="@dimen/text_medium"
-        android:layout_marginTop="30dp"/>
 </LinearLayout>
